shopping card Section end  push

--- a/index.html
+++ b/index.html
@@ -229,14 +229,14 @@
                         </div>
                         <!--Modal section  -->
                         <div class="card-actions">
-                            <a href="#my_modal_8" class="text-[#F85559] text-xl font-medium">Details</a>
-                            <div class="modal" id="my_modal_8">
+                            <a href="#my_modal_6" class="text-[#F85559] text-xl font-medium">Details</a>
+                            <div class="modal" id="my_modal_6">
                                 <div class="modal-box">
                                     <!-- modal details -->
                                     <div>
                                         <div class="card ">
                                             <figure class="px-10 pt-10">
-                                                <img src="images/fruit7.png" alt="Shoes" class="rounded-xl" />
+                                                <img src="images/orange.png" alt="Shoes" class="rounded-xl" />
                                             </figure>
                                             <div class="card-body items-center text-center">
                                                 <h3 class="my-3 text-4xl font-extrabold">Orange</h3>
@@ -276,7 +276,7 @@
                 <!-- card 2 -->
                 <div class="card  bg-base-100 border">
                     <figure class="px-10 pt-10">
-                        <img src="images/fruit7.png" alt="Shoes" class="rounded-xl" />
+                        <img src="images/fruit7.png" alt="orange" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <p class="card-title text-2xl font-semibold">12.90$ - 18.85$</p>
@@ -285,21 +285,21 @@
                         <!-- rating part -->
                         <div class="rating my-2">
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"/>
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                         </div>
                         <!--Modal section  -->
                         <div class="card-actions">
-                            <a href="#my_modal_8" class="text-[#F85559] text-xl font-medium">Details</a>
-                            <div class="modal" id="my_modal_8">
+                            <a href="#my_modal_7" class="text-[#F85559] text-xl font-medium">Details</a>
+                            <div class="modal" id="my_modal_7">
                                 <div class="modal-box">
                                     <!-- modal details -->
                                     <div>
                                         <div class="card ">
                                             <figure class="px-10 pt-10">
-                                                <img src="images/fruit8.png" alt="Shoes" class="rounded-xl" />
+                                                <img src="images/dragon.png" alt="orange" class="rounded-xl" />
                                             </figure>
                                             <div class="card-body items-center text-center">
                                                 <h3 class="my-3 text-4xl font-extrabold">Red Dragon</h3>
@@ -339,7 +339,7 @@
                 <!-- card 3 -->
                 <div class="card  bg-base-100 border">
                     <figure class="px-10 pt-10">
-                        <img src="images/fruit8.png" alt="Shoes" class="rounded-xl" />
+                        <img src="images/fruit8.png" alt="Dragon" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <p class="card-title text-2xl font-semibold">12.90$ - 18.85$</p>
@@ -348,9 +348,9 @@
                         <!-- rating part -->
                         <div class="rating my-2">
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"/>
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                         </div>
                         <!--Modal section  -->
@@ -360,9 +360,9 @@
                                 <div class="modal-box">
                                     <!-- modal details -->
                                     <div>
-                                        <div class="card ">
+                                        <div class="card1 ">
                                             <figure class="px-10 pt-10">
-                                                <img src="images/fruit9.png" alt="Shoes" class="rounded-xl" />
+                                                <img src="images/banana.png" alt="Dragon" class="rounded-xl" />
                                             </figure>
                                             <div class="card-body items-center text-center">
                                                 <h3 class="my-3 text-4xl font-extrabold">Banana</h3>
@@ -418,14 +418,14 @@
                         </div>
                         <!--Modal section  -->
                         <div class="card-actions ">
-                            <a href="#my_modal_8" class="text-[#F85559] text-xl font-medium">Details</a>
-                            <div class="modal" id="my_modal_8">
+                            <a href="#my_modal_9" class="text-[#F85559] text-xl font-medium">Details</a>
+                            <div class="modal" id="my_modal_9">
                                 <div class="modal-box">
                                     <!-- modal details -->
                                     <div>
                                         <div class="card ">
                                             <figure class="px-10 pt-10">
-                                                <img src="images/fruit6.png" alt="Shoes" class="rounded-xl" />
+                                                <img src="images/apple.png" alt="Shoes" class="rounded-xl" />
                                             </figure>
                                             <div class="card-body items-center text-center">
                                                 <h3 class="my-3 text-4xl font-extrabold">Apples</h3>
