--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         </section>
         <!-- Fruit banner -->
         <section class="container mx-auto">
-            <div class="lg:grid lg:grid-cols-5 gap-20 absolute justify-center -my-52 mx-72 bg-white shadow-lg rounded-2xl p-7 hidden">
+            <div class="lg:grid lg:grid-cols-5 gap-10 absolute justify-center -my-52 mx-72 bg-white shadow-lg rounded-2xl px-5 py-3 hidden">
                 <div><img src="images/fruit1.png" alt="" class="w-32 h-32">
                     <h2 class="text-center text-[20px] font-medium">Grape</h2>
                 </div>
@@ -237,7 +237,7 @@
                     </figure>
                     <div class="card-body items-center text-center">
                         <p class="card-title text-2xl font-semibold">12.90$ - 18.85$</p>
-                        <div class="bg-gray-200 w-[244px] h-1 my-4"></div>
+                        <div class="bg-gray-200 w-[244px] h-0.5 my-4"></div>
                         <h3 class=" text-xl font-medium">Apples</h3>
                         <!-- rating part -->
                         <div class="rating my-2">
@@ -268,11 +268,11 @@
                                                     <input type="radio" name="rating-2"
                                                         class="mask mask-star-2 bg-[#F85559]" />
                                                     <input type="radio" name="rating-2"
-                                                        class="mask mask-star-2 bg-[#F85559]" checked />
+                                                        class="mask mask-star-2 bg-[#F85559]"  />
                                                     <input type="radio" name="rating-2"
                                                         class="mask mask-star-2 bg-[#F85559]" />
                                                     <input type="radio" name="rating-2"
-                                                        class="mask mask-star-2 bg-[#F85559]" />
+                                                        class="mask mask-star-2 bg-[#F85559]"checked />
                                                     <input type="radio" name="rating-2"
                                                         class="mask mask-star-2 bg-[#F85559]" />
                                                 </div>
@@ -300,7 +300,7 @@
                     </figure>
                     <div class="card-body items-center text-center">
                         <p class="card-title text-2xl font-semibold">12.90$ - 18.85$</p>
-                        <div class="bg-gray-200 w-[244px] h-1 my-4"></div>
+                        <div class="bg-gray-200 w-[244px] h-0.5 my-4"></div>
                         <h3 class=" text-xl font-medium">Orange</h3>
                         <!-- rating part -->
                         <div class="rating my-2">
@@ -363,7 +363,7 @@
                     </figure>
                     <div class="card-body items-center text-center">
                         <p class="card-title text-2xl font-semibold">12.90$ - 18.85$</p>
-                        <div class="bg-gray-200 w-[244px] h-1 my-4"></div>
+                        <div class="bg-gray-200 w-[244px] h-0.5 my-4"></div>
                         <h3 class=" text-xl font-medium">Red Dragon</h3>
                         <!-- rating part -->
                         <div class="rating my-2">
@@ -426,7 +426,7 @@
                     </figure>
                     <div class="card-body items-center text-center">
                         <p class="card-title text-2xl font-semibold">12.90$ - 18.85$</p>
-                        <div class="bg-gray-200 w-[244px] h-1 my-4"></div>
+                        <div class="bg-gray-200 w-[244px] h-0.5 my-4"></div>
                         <h3 class=" text-xl font-medium">Banana</h3>
                         <!-- rating part -->
                         <div class="rating my-2">
@@ -506,14 +506,21 @@
                             <div class="hero-content text-center text-neutral-content">
                                 <div class="max-w-[679px]">
                                     <div class="w-36 mx-auto mb-7">
-                                        <img src="images/member1.png" alt="">
+                                        <img src="images/member1.png" alt=""> 
                                     </div>
                                     <h1 class="mb-3 text-2xl font-extrabold whitespace-nowrap">Awlad Hossain</h1>
                                     <h3 class="text-[14px]">Fruits Expert</h3>
                                     <div class="grid justify-center gap-3 grid-cols-3 my-5">
-                                        <p><i class="fa-brands fa-facebook fa-2xl" style="color: #F85559;"></i></p>
-                                        <p><i class="fa-brands fa-twitter fa-2xl" style="color: #F85559;"></i></p>
-                                        <p><i class="fa-brands fa-linkedin-in fa-2xl" style="color: #F85559;"></i></p>
+                                        <a class="bg-[#F85559] rounded-full h-10 w-10 relative">
+                                            <i class="fa-brands fa-facebook-f fa-xl absolute -mx-2 my-5" style="color: #ffffff;"></i>
+                                        </a>
+                                        <a class="bg-[#F85559] rounded-full h-10 w-10 relative">
+                                            <i class="fa-brands fa-twitter fa-xl absolute -mx-3 my-5" style="color: #ffffff;"></i>
+                                        </a>
+                                        <a class="bg-[#F85559] rounded-full h-10 w-10 relative">
+                                            <i class="fa-brands fa-linkedin-in fa-xl my-5" style="color: #ffffff;"></i>
+                                        </a>
+                                        
                                     </div>
                                 </div>
                             </div>
@@ -527,9 +534,15 @@
                                     <h1 class="mb-3 text-2xl font-extrabold whitespace-nowrap ">Safia Chowdhury</h1>
                                     <h3 class="text-[14px]">Fruits Expert</h3>
                                     <div class="grid justify-center gap-3 grid-cols-3 my-5">
-                                        <p><i class="fa-brands fa-facebook fa-2xl" style="color: #F85559;"></i></p>
-                                        <p><i class="fa-brands fa-twitter fa-2xl" style="color: #F85559;"></i></p>
-                                        <p><i class="fa-brands fa-linkedin-in fa-2xl" style="color: #F85559;"></i></p>
+                                        <a class="bg-[#F85559] rounded-full h-10 w-10 relative">
+                                            <i class="fa-brands fa-facebook-f fa-xl absolute -mx-2 my-5" style="color: #ffffff;"></i>
+                                        </a>
+                                        <a class="bg-[#F85559] rounded-full h-10 w-10 relative">
+                                            <i class="fa-brands fa-twitter fa-xl absolute -mx-3 my-5" style="color: #ffffff;"></i>
+                                        </a>
+                                        <a class="bg-[#F85559] rounded-full h-10 w-10 relative">
+                                            <i class="fa-brands fa-linkedin-in fa-xl my-5" style="color: #ffffff;"></i>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -543,9 +556,15 @@
                                     <h1 class="mb-3 text-2xl font-extrabold whitespace-nowrap">Rokib Hossain</h1>
                                     <h3 class="text-[14px]">Fruits Expert</h3>
                                     <div class="grid justify-center gap-3 grid-cols-3 my-5">
-                                        <p><i class="fa-brands fa-facebook fa-2xl" style="color: #F85559;"></i></p>
-                                        <p><i class="fa-brands fa-twitter fa-2xl" style="color: #F85559;"></i></p>
-                                        <p><i class="fa-brands fa-linkedin-in fa-2xl" style="color: #F85559;"></i></p>
+                                        <a class="bg-[#F85559] rounded-full h-10 w-10 relative">
+                                            <i class="fa-brands fa-facebook-f fa-xl absolute -mx-2 my-5" style="color: #ffffff;"></i>
+                                        </a>
+                                        <a class="bg-[#F85559] rounded-full h-10 w-10 relative">
+                                            <i class="fa-brands fa-twitter fa-xl absolute -mx-3 my-5" style="color: #ffffff;"></i>
+                                        </a>
+                                        <a class="bg-[#F85559] rounded-full h-10 w-10 relative">
+                                            <i class="fa-brands fa-linkedin-in fa-xl my-5" style="color: #ffffff;"></i>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -558,9 +577,15 @@
                                     <h1 class="mb-3 text-2xl font-extrabold whitespace-nowrap">Chaity</h1>
                                     <h3 class="text-[14px]">Fruits Expert</h3>
                                     <div class="grid justify-center gap-3 grid-cols-3 my-5">
-                                        <p><i class="fa-brands fa-facebook fa-2xl" style="color: #F85559;"></i></p>
-                                        <p><i class="fa-brands fa-twitter fa-2xl" style="color: #F85559;"></i></p>
-                                        <p><i class="fa-brands fa-linkedin-in fa-2xl" style="color: #F85559;"></i></p>
+                                        <a class="bg-[#F85559] rounded-full h-10 w-10 relative">
+                                            <i class="fa-brands fa-facebook-f fa-xl absolute -mx-2 my-5" style="color: #ffffff;"></i>
+                                        </a>
+                                        <a class="bg-[#F85559] rounded-full h-10 w-10 relative">
+                                            <i class="fa-brands fa-twitter fa-xl absolute -mx-3 my-5" style="color: #ffffff;"></i>
+                                        </a>
+                                        <a class="bg-[#F85559] rounded-full h-10 w-10 relative">
+                                            <i class="fa-brands fa-linkedin-in fa-xl my-5" style="color: #ffffff;"></i>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -596,7 +621,7 @@
                             <div>
                                 <h3 class="text-[#121212] text-2xl font-extrabold">Dedicated Team</h3>
                             </div>
-                            <div class="w-[130px] h-0.5  bg-slate-400 my-5"></div>
+                            <div class="w-[130px] h-0.5  bg-slate-300 my-5"></div>
                             <div>
                                 <p class="text-[16px] font-medium text-gray-500">Professional employees are there for
                                     you to pick the most amazing and fresh fruits.</p>
@@ -616,7 +641,7 @@
                             <div>
                                 <h3 class="text-[#121212] text-2xl font-extrabold">Fresh is Best</h3>
                             </div>
-                            <div class="w-[130px] h-0.5  bg-slate-400 my-5"></div>
+                            <div class="w-[130px] h-0.5  bg-slate-300 my-5"></div>
                             <div>
                                 <p class="text-[16px] font-medium text-gray-500">Professional employees are there for
                                     you to pick the most amazing and fresh fruits.</p>
@@ -635,7 +660,7 @@
                             <div>
                                 <h3 class="text-[#121212] text-2xl font-extrabold">Dedicated Team Gift Certificates</h3>
                             </div>
-                            <div class="w-[130px] h-0.5  bg-slate-400 my-5"></div>
+                            <div class="w-[130px] h-0.5  bg-slate-300 my-5"></div>
                             <div>
                                 <p class="text-[16px] font-medium text-gray-500">Professional employees are there for
                                     you to pick the most amazing and fresh fruits.</p>
@@ -662,11 +687,11 @@
                                 </div>
 
                             </div>
-                            <div class="flex flex-col justify-center items-center lg:justify-start lg:items-end">
+                            <div class="flex flex-col justify-center items-center lg:justify-end lg:items-end">
                                 <div>
                                     <h3 class="text-[#121212] text-2xl font-extrabold">Integrated Supplier</h3>
                                 </div>
-                                <div class="w-[130px] h-0.5  bg-slate-400 my-5"></div>
+                                <div class="w-[130px] h-0.5  bg-slate-300 my-5"></div>
                                 <div>
                                     <p class="text-[16px] font-medium text-gray-500 lg:text-right">Professional
                                         employees are there for
@@ -687,7 +712,7 @@
                                 <div>
                                     <h3 class="text-[#121212] text-2xl font-extrabold">Sustainable Practice</h3>
                                 </div>
-                                <div class="w-[130px] h-0.5  bg-slate-400 my-5"></div>
+                                <div class="w-[130px] h-0.5  bg-slate-300 my-5"></div>
                                 <div>
                                     <p class="text-[16px] font-medium text-gray-500 lg:text-right">Professional
                                         employees are there for
@@ -708,7 +733,7 @@
                                 <div>
                                     <h3 class="text-[#121212] text-2xl font-extrabold">The Benefits Only</h3>
                                 </div>
-                                <div class="w-[130px] h-0.5  bg-slate-400 my-5"></div>
+                                <div class="w-[130px] h-0.5  bg-slate-300 my-5"></div>
                                 <div>
                                     <p class="text-[16px] font-medium text-gray-500 lg:text-right">Professional
                                         employees are there for
@@ -720,7 +745,6 @@
                 </div>
             </div>
         </section>
-
     </main>
     <footer class="footer footer-center p-10 bg-black text-primary-content">
         <div>
