--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body class="lato-font">
     <header class="container mx-auto my-5">
         <nav class=" ">
-            <div class="navbar primary-color rounded-full p-4">
+            <div class="navbar lg:bg-[#F85559] md:bg-[#F85559] bg-white rounded-full p-4">
                 <!-- menu part -->
                 <div class="navbar-start hidden lg:flex md:w-auto md:flex lg:w-4/5">
                     <ul class="menu menu-horizontal px-1 font-medium text-white text-[18px] mx-10 ">
@@ -81,7 +81,7 @@
                 <!-- search box part -->
                 <div class="navbar-end hidden lg:flex  ">
                     <input type="text" placeholder="Search Here" class=" py-3 px-20 rounded-full relative"><i
-                        class="fa-solid fa-magnifying-glass fa-2xl absolute mr-4 text-gray-400"></i>
+                        class="fa-solid fa-magnifying-glass fa-2xl absolute mr-4 text-gray-400 border-0"></i>
                 </div>
             </div>
         </nav>
@@ -92,8 +92,8 @@
             <div class="carousel w-full h-[600px]  z-10">
                 <!-- slide 1 -->
                 <div id="slide1" class="carousel-item relative w-full">
-                    <div class="hero  rounded-2xl" style="background-image: url('images/banner1.png');">
-                        <div class="hero-overlay bg-gray-900 bg-opacity-70"></div>
+                    <div class="hero  rounded-3xl" style="background-image: url('images/banner1.png');">
+                        <div class="hero-overlay bg-gray-900 bg-opacity-70 rounded-3xl"></div>
                         <div class="hero-content text-center text-neutral-content">
                             <div class="max-w-[679px]">
                                 <h1 class="mb-3 text-[72px] font-extrabold ">Exotic tastes at your doorstep</h1>
@@ -103,14 +103,14 @@
                         </div>
                     </div>
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                        <a href="#slide4" class="btn btn-circle">❮</a>
-                        <a href="#slide2" class="btn btn-circle">❯</a>
+                        <a href="#slide4" class="btn btn-circle bg-black text-white border-0">❮</a>
+                        <a href="#slide2" class="btn btn-circle bg-black text-white border-0">❯</a>
                     </div>
                 </div>
                 <!-- slide 2 -->
                 <div id="slide2" class="carousel-item relative w-full">
-                    <div class="hero  rounded-2xl" style="background-image: url('images/banner2.png');">
-                        <div class="hero-overlay bg-gray-900 bg-opacity-70"></div>
+                    <div class="hero  rounded-3xl" style="background-image: url('images/banner2.png');">
+                        <div class="hero-overlay bg-gray-900 bg-opacity-70 rounded-3xl"></div>
                         <div class="hero-content text-center text-neutral-content">
                             <div class="max-w-[679px]">
                                 <h1 class="mb-3 text-[72px] font-extrabold ">Exotic tastes at your doorstep</h1>
@@ -120,14 +120,14 @@
                         </div>
                     </div>
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                        <a href="#slide1" class="btn btn-circle">❮</a>
-                        <a href="#slide3" class="btn btn-circle">❯</a>
+                        <a href="#slide1" class="btn btn-circle bg-black text-white border-0">❮</a>
+                        <a href="#slide3" class="btn btn-circle bg-black text-white border-0">❯</a>
                     </div>
                 </div>
                 <!-- slide3 -->
                 <div id="slide3" class="carousel-item relative w-full">
-                    <div class="hero  rounded-2xl" style="background-image: url('images/banner3.png');">
-                        <div class="hero-overlay bg-gray-900 bg-opacity-70"></div>
+                    <div class="hero  rounded-3xl" style="background-image: url('images/banner3.png');">
+                        <div class="hero-overlay bg-gray-900 bg-opacity-70 rounded-3xl"></div>
                         <div class="hero-content text-center text-neutral-content">
                             <div class="max-w-[679px]">
                                 <h1 class="mb-3 text-[72px] font-extrabold ">Exotic tastes at your doorstep</h1>
@@ -137,14 +137,14 @@
                         </div>
                     </div>
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                        <a href="#slide2" class="btn btn-circle">❮</a>
-                        <a href="#slide4" class="btn btn-circle">❯</a>
+                        <a href="#slide2" class="btn btn-circle bg-black text-white border-0">❮</a>
+                        <a href="#slide4" class="btn btn-circle bg-black text-white border-0">❯</a>
                     </div>
                 </div>
                 <!-- Slide4 -->
                 <div id="slide4" class="carousel-item relative w-full">
                     <div class="hero  rounded-2xl" style="background-image: url('images/banner4.png');">
-                        <div class="hero-overlay bg-gray-900 bg-opacity-70"></div>
+                        <div class="hero-overlay bg-gray-900 bg-opacity-70 rounded-3xl"></div>
                         <div class="hero-content text-center text-neutral-content">
                             <div class="max-w-[679px]">
                                 <h1 class="mb-3 text-[72px] font-extrabold ">Exotic tastes at your doorstep</h1>
@@ -154,8 +154,8 @@
                         </div>
                     </div>
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                        <a href="#slide3" class="btn btn-circle">❮</a>
-                        <a href="#slide1" class="btn btn-circle">❯</a>
+                        <a href="#slide3" class="btn btn-circle bg-black text-white border-0">❮</a>
+                        <a href="#slide1" class="btn btn-circle bg-black text-white border-0">❯</a>
                     </div>
                 </div>
             </div>
@@ -606,9 +606,9 @@
         </section>
         <!-- Fruit Choose section -->
         <section class="my-24">
-            <div class=" grid lg:grid-cols-3 grid-cols-1 gap-10 ">
+            <div class=" grid lg:grid-cols-3 md:grid-cols-3 grid-cols-1 gap-10 relative">
                 <!-- left part -->
-                <div class="">
+                <div class=" lg:relative md:relative relative lg:mt-0 md:mt-0 mt-[450px]">
                     <!-- Dedicated Team -->
                     <div class="flex lg:flex-row flex-col gap-5 justify-center items-center lg:justify-start ">
                         <div class="w-10 h-10 p-7 bg-slate-500 rounded-full relative">
@@ -623,7 +623,7 @@
                             </div>
                             <div class="w-[130px] h-0.5  bg-slate-300 my-5"></div>
                             <div>
-                                <p class="text-[16px] font-medium text-gray-500">Professional employees are there for
+                                <p class="text-[16px] font-medium text-gray-500 lg:text-left  text-center">Professional employees are there for
                                     you to pick the most amazing and fresh fruits.</p>
                             </div>
                         </div>
@@ -643,7 +643,7 @@
                             </div>
                             <div class="w-[130px] h-0.5  bg-slate-300 my-5"></div>
                             <div>
-                                <p class="text-[16px] font-medium text-gray-500">Professional employees are there for
+                                <p class="text-[16px] font-medium text-gray-500 lg:text-left  text-center">Professional employees are there for
                                     you to pick the most amazing and fresh fruits.</p>
                             </div>
                         </div>
@@ -658,20 +658,20 @@
                         </div>
                         <div class="flex flex-col justify-center items-center lg:justify-start lg:items-start">
                             <div>
-                                <h3 class="text-[#121212] text-2xl font-extrabold">Dedicated Team Gift Certificates</h3>
+                                <h3 class="text-[#121212] text-2xl font-extrabold lg:text-left text-center">Dedicated Team Gift Certificates</h3>
                             </div>
                             <div class="w-[130px] h-0.5  bg-slate-300 my-5"></div>
                             <div>
-                                <p class="text-[16px] font-medium text-gray-500">Professional employees are there for
+                                <p class="text-[16px] font-medium text-gray-500 lg:text-left  text-center">Professional employees are there for
                                     you to pick the most amazing and fresh fruits.</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <!-- center part -->
-                <div class="flex lg:flex-1 justify-center">
+                <div class="flex lg:flex md:h-auto justify-center items-center absolute lg:relative md:relative lg:mt-0 md:mt-0 ">
                     <div>
-                        <img src="images/whychoose1.png" alt="">
+                        <img class=" lg:mx-0 md:mx-0 mx-7" src="images/whychoose1.png" alt="">
                     </div>
                 </div>
                 <!-- Right part -->
@@ -693,7 +693,7 @@
                                 </div>
                                 <div class="w-[130px] h-0.5  bg-slate-300 my-5"></div>
                                 <div>
-                                    <p class="text-[16px] font-medium text-gray-500 lg:text-right">Professional
+                                    <p class="text-[16px] font-medium text-gray-500 lg:text-right text-center">Professional
                                         employees are there for
                                         you to pick the most amazing and fresh fruits.</p>
                                 </div>
@@ -710,11 +710,11 @@
                             </div>
                             <div class="flex flex-col justify-center items-center lg:justify-start lg:items-end">
                                 <div>
-                                    <h3 class="text-[#121212] text-2xl font-extrabold">Sustainable Practice</h3>
+                                    <h3 class="text-[#121212] text-2xl font-extrabold lg:text-right text-center">Sustainable Practice</h3>
                                 </div>
                                 <div class="w-[130px] h-0.5  bg-slate-300 my-5"></div>
                                 <div>
-                                    <p class="text-[16px] font-medium text-gray-500 lg:text-right">Professional
+                                    <p class="text-[16px] font-medium text-gray-500 lg:text-right text-center">Professional
                                         employees are there for
                                         you to pick the most amazing and fresh fruits.</p>
                                 </div>
@@ -731,11 +731,11 @@
                             </div>
                             <div class="flex flex-col justify-center items-center lg:justify-end lg:items-end">
                                 <div>
-                                    <h3 class="text-[#121212] text-2xl font-extrabold">The Benefits Only</h3>
+                                    <h3 class="text-[#121212] text-2xl font-extrabold lg:text-right text-center">The Benefits Only</h3>
                                 </div>
                                 <div class="w-[130px] h-0.5  bg-slate-300 my-5"></div>
                                 <div>
-                                    <p class="text-[16px] font-medium text-gray-500 lg:text-right">Professional
+                                    <p class="text-[16px] font-medium text-gray-500 lg:text-right text-center">Professional
                                         employees are there for
                                         you to pick the most amazing and fresh fruits.</p>
                                 </div>
