--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
     <!-- Icons Link -->
     <script src="https://kit.fontawesome.com/b1a5dc2c01.js" crossorigin="anonymous"></script>
+    <!-- favicon  -->
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
     <style>
         .lato-font {
             font-family: 'Lato', sans-serif;
